# MultiMind

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: multimind-design-en.html  multimind-design.html
src/multimind/: __init__.py  __main__.py
src/multimind/adapters/: __init__.py  api_client.py  base.py  browser.py  cli_reuse.py  local.py  public_endpoint.py  registry.py  streaming.py
src/multimind/adapters/sites/: __init__.py  base.py  chatgpt.py  deepseek.py  doubao.py  generic.py  kimi.py  profile.py  qwen.py  registry.py
src/multimind/adapters/sites/profiles/: chatgpt.toml  deepseek.toml  doubao.toml  kimi.toml  qwen.toml
src/multimind/cli/: __init__.py  main.py
src/multimind/cli/commands/: __init__.py  chat.py  git.py  init.py  providers.py
src/multimind/config/: __init__.py  settings.py
src/multimind/core/: __init__.py  constants.py  exceptions.py  interfaces.py  logging.py  types.py
src/multimind/engine/: __init__.py  context.py  groupchat.py  orchestrator.py  roles.py  topology.py
src/multimind/git/: __init__.py  auto_commit.py
src/multimind/memory/: __init__.py  manager.py
src/multimind/routing/: __init__.py  failover.py  quota.py  router.py  tags.py
src/multimind/skills/: __init__.py  audit.py  base.py  loader.py  registry.py
src/multimind/skills/community/: __init__.py
src/multimind/skills/core/: __init__.py  file_ops.py  http.py  manifests.py  search.py  shell.py
src/multimind/ui/: __init__.py  render.py
src/multimind/ui/tui/: __init__.py  app.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_adapters.py  test_config.py  test_context.py  test_core.py  test_engine.py  test_git.py  test_memory.py  test_prompts.py  test_routing.py  test_site_adapters.py  test_skills.py
