[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimind"
version = "0.1.0"
description = "MultiMind — 多 AI 协作 CLI Agent"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "MultiMind Contributors" },
]
keywords = ["ai", "cli", "agent", "multi-ai", "group-chat", "llm", "collaboration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "textual>=0.60.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
local = ["ollama>=0.1.7"]
vector = ["sqlite-vss>=0.1.2"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
all = ["multimind[browser,local,vector]"]

[project.urls]
Homepage = "https://github.com/multimind/multimind"
Repository = "https://github.com/multimind/multimind"
Documentation = "https://github.com/multimind/multimind#readme"
Issues = "https://github.com/multimind/multimind/issues"
Changelog = "https://github.com/multimind/multimind/blob/main/CHANGELOG.md"

[project.scripts]
multimind = "multimind.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False in tests is fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ── pytest ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "asyncio: asyncio tests",
    "slow: slow tests",
]

# ── coverage ────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/multimind"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
